src/objects/BST_Change_Request__c.object
<CustomObject>
    <fields>
        <fullName>BST_Approver_s_Comments__c</fullName>
        <label>Approver&apos;s Comments</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BST_Date_Requested__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BST_Description_of_Change__c</fullName>
        <inlineHelpText>Provide a detailed summary of the requested change.</inlineHelpText>
        <label>Description of Change</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BST_Rationale_for_the_Change__c</fullName>
        <inlineHelpText>Provide the reason for why you want or need this change.</inlineHelpText>
        <label>Rationale for the Change</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BST_Request_Description__c</fullName>
        <label>Request Description</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BST_Request_Status__c</fullName>
        <label>Request Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Ready for Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Slotted for Release</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                    <isActive>false</isActive>
                    <label>Declined</label>
                </value>
                <value>
                    <fullName>Waiting Approval</fullName>
                    <isActive>false</isActive>
                    <label>Waiting Approval</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Impact_Description__c</fullName>
        <inlineHelpText>Provide a description of the impact to the project/business if this change is not implemented</inlineHelpText>
        <label>Impact Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impact_Level__c</fullName>
        <inlineHelpText>High: Business cannot operate without this feature.
Medium: Business may be able to operate without this feature.
Low: Business can operate without this feature. This issue is nice to have.</inlineHelpText>
        <label>Impact Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Change Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BST_Requestor__c</columns>
        <columns>BST_Request_Status__c</columns>
        <columns>BST_Description_of_Change__c</columns>
        <columns>BST_Approver_s_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BST_Change_Management_Approvers_BST_Change_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Change Management Approvers</label>
        <queue>BST_Change_Management_Approvers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CR-{0000000000}</displayFormat>
        <label>CR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>